# django-bird

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  RELEASING.md  ROADMAP.md  \  benchmark.py  clipboard  compiler_stats  noxfile.py  pyproject.toml
.bin/: bump.py
.copier/: package.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: release.yml  test.yml
.just/: copier.just  documentation.just  project.just  rust.just
demo/: demo.py
demo/templates/: index.html
demo/templates/bird/: banner.html  footer.html  header.html  page.css  page.html  sidebar.html
demo/templates/bird/layout/: base.html
demo/templates/bird/nav/: item.html
docs/: angles.md  assets.md  attrs.md  conf.py  configuration.md  index.md  naming.md  organization.md  params.md  plugins.md  slots.md  vars.md
docs/_static/css/: custom.css
docs/development/: contributing.md  just.md  releasing.md
docs/project/: motivation.md  roadmap.md
rust/: Cargo.toml
rust/src/: lexer.rs  lib.rs
src/: _bird_loader.pyi
src/_bird_loader/: Cargo.toml
src/_bird_loader/src/: compiler.rs  contents.rs  lib.rs
src/compiler/: Cargo.toml
src/compiler/src/: lib.rs
src/django_bird/: __init__.py  _typing.py  apps.py  cache.py  compiler.py  components.py  conf.py  loader.py  manifest.py  params.py  registry.py  slots.py  staticfiles.py  templates.py  urls.py  utils.py  views.py
src/django_bird/components/: attrs.py  params.py  props.py  slots.py  templates.py
src/django_bird/management/commands/: bird_profile.py  generate_asset_manifest.py
src/django_bird/plugins/: __init__.py  file_assets.py  hookspecs.py  manager.py
src/django_bird/staticfiles/: __init__.py  asset.py  finder.py
src/django_bird/templates/django_bird/: button.html
src/django_bird/templatetags/: django_bird.py
src/django_bird/templatetags/tags/: __init__.py  asset.py  bird.py  load.py  prop.py  slot.py  var.py
src/loader/src/: compiler.rs  lib.rs
tests/: benchmark_large.txt  benchmark_medium.txt  benchmark_small.txt  compiler_stats  conftest.py  profile_stats.txt  settings.py  test_apps.py  test_benchmark.py  test_cache.py  test_compiler.py  test_components.py  test_conf.py  test_fixtures.py  test_integration.py  test_loader.py  test_manifest.py  test_params.py  test_performance.py  test_staticfiles.py  test_templates.py  test_templatetags.py  test_urls.py  test_utils.py  test_version.py  test_views.py  utils.py
tests/components/: test_params.py  test_templates.py
tests/plugins/: test_file_asset.py
tests/templates/: with_bird.html  without_bird.html
tests/templates/bird/: button.html
tests/templatetags/: test_asset.py  test_bird.py  test_load.py  test_prop.py  test_slot.py  test_var.py
