[package]
name = "bird-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_bird_loader"
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.34"
once_cell = "1.20.2"
pyo3 = "0.22.0"
regex = "1.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
